@@ -358,6 +358,9 @@ class Mosquitto:
 		Returns >0 on error."""
 		return _mosquitto_username_pw_set(self._mosq, username, password)
 
+	def strerror(self, mosq_errno):
+		return _mosquitto_strerror(mosq_errno)
+
 	def _internal_on_connect(self, mosq, obj, rc):
 		if self.on_connect:
 			self.on_connect(self, self.obj, rc)
@@ -505,6 +508,10 @@ _mosquitto_subscribe_callback_set.restype = None
 _mosquitto_unsubscribe_callback_set = _libmosq.mosquitto_unsubscribe_callback_set
 _mosquitto_unsubscribe_callback_set.argtypes = [c_void_p, c_void_p]
 _mosquitto_unsubscribe_callback_set.restype = None
+
+_mosquitto_strerror = _libmosq.mosquitto_strerror
+_mosquitto_strerror.argtypes = [c_int]
+_mosquitto_strerror.restype = c_char_p
 
 _MOSQ_CONNECT_FUNC = CFUNCTYPE(None, c_void_p, c_void_p, c_int)
 _MOSQ_DISCONNECT_FUNC = CFUNCTYPE(None, c_void_p, c_void_p, c_int)
